# piece-table.rs

./: Cargo.toml  README.md
motto_core/: Cargo.toml
motto_core/src/: buffer.rs  document.rs  fragment.rs  indexed_string.rs  lib.rs  source_text.rs  transaction.rs
motto_core/src/document/: indexed_string.rs  mod.rs
motto_core/src/editor/: mod.rs
motto_ui/: Cargo.toml
src/: indexed_string.rs  lib.rs  main.rs
