[package]
name = "motto"
version = "0.1.0"
authors = ["Jesse Gibson <JesseTheGibson@gmail.com>"]
edition = "2018"

[dependencies]
termion = "^1.5.1"
motto_core = { version = "*", path = "motto_core" }
motto_ui = { version = "*", path = "motto_ui" }

[workspace]
members = [
  "./motto_core",
  "./motto_ui",
]
